@@ -1,5 +1,10 @@
 2008-01-16  Jim Meyering  <meyering@redhat.com>
 
+	* sed/execute.c (open_next_file, get_backup_file_name): Avoid
+	warnings from gcc.  Avoid shadowing global "pipe".
+
+2008-01-16  Jim Meyering  <meyering@redhat.com>
+
 	* autoboot.conf (gnulib_modules): Add stat-macros and pathmax.
 
 2007-10-25  Paolo Bonzini  <bonzini@gnu.org>
